# pybeckerplus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: validate.yml
pybeckerplus/: __init__.py  client.py  constants.py  device.py  exceptions.py  packet.py
resources/: protocoll.md
src/pybeckerplus/: __init__.py  client.py  constants.py  device.py  exceptions.py  packet.py
tests/: test_library.py  test_polling.py  test_protocol.py  test_read_loop.py
tools/: cli.py
